// Copyright 2017 LINE Corporation
//
// LINE Corporation licenses this file to you under the Apache License,
// version 2.0 (the "License"); you may not use this file except in compliance
// with the License. You may obtain a copy of the License at:
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.

// Copyright 2015, Google Inc.
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of Google Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

// An integration test service that covers all the method signature permutations
// of unary/streaming requests/responses.
syntax = "proto3";

import "com/linecorp/armeria/grpc/testing/empty.proto";
import "com/linecorp/armeria/grpc/testing/messages.proto";

package armeria.grpc.testing;

option java_package = "com.linecorp.armeria.grpc.testing";

// A simple service to test the various types of RPCs and experiment with
// performance with various types of payload.
service TestService {
  // One empty request followed by one empty response.
  rpc EmptyCall(armeria.grpc.testing.Empty) returns (armeria.grpc.testing.Empty);

  // One request followed by one response.
  rpc UnaryCall(SimpleRequest) returns (SimpleResponse);

  // One request followed by a sequence of responses (streamed download).
  // The server returns the payload with client desired type and sizes.
  rpc StreamingOutputCall(StreamingOutputCallRequest)
      returns (stream StreamingOutputCallResponse);

  // A sequence of requests followed by one response (streamed upload).
  // The server returns the aggregated size of client payload as the result.
  rpc StreamingInputCall(stream StreamingInputCallRequest)
      returns (StreamingInputCallResponse);

  // A sequence of requests with each request served by the server immediately.
  // As one request could lead to multiple responses, this interface
  // demonstrates the idea of full duplexing.
  rpc FullDuplexCall(stream StreamingOutputCallRequest)
      returns (stream StreamingOutputCallResponse);

  // A sequence of requests followed by a sequence of responses.
  // The server buffers all the client requests and then serves them in order. A
  // stream of responses are returned to the client when the server starts with
  // first request.
  rpc HalfDuplexCall(stream StreamingOutputCallRequest)
      returns (stream StreamingOutputCallResponse);

  // The test server will not implement this method. It will be used
  // to test the behavior when clients call unimplemented methods.
  rpc UnimplementedCall(armeria.grpc.testing.Empty) returns (armeria.grpc.testing.Empty);
}

// A service for use in unit tests with methods for fine-grained test conditions.
service UnitTestService {

    // A unary call which always expects a standard request message and always returns a standard response.
    rpc StaticUnaryCall(SimpleRequest) returns (SimpleResponse);

    // A streaming output call which always expects a standard request message and always returns a standard
    // streamed response.
    rpc StaticStreamedOutputCall(SimpleRequest) returns (stream SimpleResponse);

    // A call that always returns an error with no message.
    rpc ErrorNoMessage(SimpleRequest) returns (SimpleResponse);

    // A call that always returns an error with a message.
    rpc ErrorWithMessage(SimpleRequest) returns (SimpleResponse);

    // A unary call that always throws an error (as opposed to using StreamObserver.onError). The error is
    // thrown in the onHalfClose callback.
    rpc UnaryThrowsError(SimpleRequest) returns (SimpleResponse);

    // A streaming call that always throws an error (as opposed to using StreamObserver.onError). The error is
    // thrown in the onMessage callback.
    rpc StreamThrowsError(stream SimpleRequest) returns (SimpleResponse);

    // A streaming call that always throws an error in the stub implementation, not message handler. The error
    // is thrown in startCall.
    rpc StreamThrowsErrorInStub(stream SimpleRequest) returns (SimpleResponse);

    // A unary call which always expects a standard request message and always turns on message compression and
    // returns a standard response.
    rpc StaticUnaryCallSetsMessageCompression(SimpleRequest) returns (SimpleResponse);

    // A streaming request call that tracks incoming requests in the RequestContext to make sure it is correctly
    // set for callbacks.
    rpc CheckRequestContext(stream SimpleRequest) returns (SimpleResponse);
}

// A simple service NOT implemented at servers so clients can test for
// that case.
service UnimplementedService {
  // A call that no server should implement
  rpc UnimplementedCall(armeria.grpc.testing.Empty) returns(armeria.grpc.testing.Empty);
}

// A service used to control reconnect server.
service ReconnectService {
  rpc Start(armeria.grpc.testing.Empty) returns (armeria.grpc.testing.Empty);
  rpc Stop(armeria.grpc.testing.Empty) returns (armeria.grpc.testing.ReconnectInfo);
}
